prevented overlap of boxes

--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,10 @@
 
 .box {
   position: absolute;
+  box-sizing: border-box;
   background-color: #C2A661; /* Light brown color to mimic cardboard */
-  border: 2px solid #916A2D; /* Darker brown for the edges */
-  box-shadow: 3px 3px 5px rgba(0,0,0,0.3); /* Soft shadow for 3D effect */
+  border: 2px solid #916A2D;
+  /* box-shadow: 3px 3px 5px rgba(0,0,0,0.3); Soft shadow for 3D effect */
   color: black;
   display: flex;
   justify-content: space-between;
